--- a/weeks/week-01/README.html
+++ b/weeks/week-01/README.html
@@ -390,10 +390,7 @@ discussions</p>
 <h2>Required Readings</h2>
 <ul>
 <li>Eirin-Lopez, J.M. &amp; Putnam, H.M. (2019). Marine environmental
-epigenomics. <em>Annual Review of Marine Science</em>, 11, 335-368.</li>
-<li>Burgess, S.C. &amp; Marshall, D.J. (2014). Adaptive parental
-effects: the importance of estimating environmental predictability and
-offspring fitness appropriately. <em>Oikos</em>, 123(7), 769-776.</li>
+epigenetics. <em>Annual Review of Marine Science</em>, 11, 335-368.</li>
 </ul>
 </div>
 <div id="discussion-questions" class="section level2">
@@ -419,11 +416,9 @@ epigenetic mechanisms to marine environmental factors</li>
 <div id="additional-resources" class="section level2">
 <h2>Additional Resources</h2>
 <ul>
-<li><a href="resources/videos/">Epigenetics overview video</a>
-(placeholder)</li>
-<li><a href="resources/datasets/">Marine environment data
-sources</a></li>
 <li><a href="glossary.md">Key terminology glossary</a></li>
+<li><a href="https://www.youtube.com/embed/MD3Fc0XOjWk">Epigentics
+Explainer : YouTube</a></li>
 </ul>
 </div>
 <div id="assessment" class="section level2">
